autumn/tests/compile-fail/empty_path.rs
use autumn::get;

#[get("")]
async fn hello() -> &'static str {
    "Hello!"
}

fn main() {}
